force-app/main/default/objects/Pedido__c/Pedido__c.object-meta.xml
<CustomObject>
    <description>Pedido de venda do CRM</description>
    <label>Pedido</label>
    <pluralLabel>Pedidos</pluralLabel>
    <nameField>
        <displayFormat>PED-{0000}</displayFormat>
        <label>Número do Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>