force-app/main/default/objects/Pedido__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observações</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>