force-app/main/default/objects/Pedido__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Confirmado</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>