force-app/main/default/objects/Pedido__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Valor total do pedido (preenchido por automação).</description>
</CustomField>